# spike

./: .gitignore  README.md  key_add
blender/: laboratory.blend
comandos/ros/: README.md
convenciones/commits/: README.md
curso_c++/: hello.i
curso_c++/argumentos/: main_function  main_function.cpp
curso_c++/async/: README.md  asycn_buffer  asycn_buffer.cpp  async  async.cpp  async_launch.cpp  example_1_promise  example_1_promise.cpp  example_2_promise  example_2_promise.cpp  future  future_wait  promise  promise.cpp  promise_threats  promise_threats.cpp
curso_c++/constructores/: constructor_example  constructor_example.cpp  contructor  contructor.cpp
curso_c++/lambda_function/: test  test.cpp
curso_c++/memory_dinamic/: 1_prueba.cpp
curso_c++/operador_ternario/: example_1  example_1.cpp
curso_c++/ordenamientos/: main  main.cpp
curso_c++/polimorfismo/: 1_ejemplo  1_ejemplo.cpp
curso_c++/proyectos/snake/: CMakeLists.txt  main  main.cpp  programa
curso_c++/smart_pointer/: 1_smart_pointer  1_smart_pointer.cpp  2_weak_pointer  2_weak_pointer.cpp
curso_c++/std_function/: 2_function  2_function.cpp  3_system_events  3_system_events.cpp  function  function.cpp
curso_c++/string/: find_string  find_string.cpp
curso_c++/struct/: struct  structura_corredor.cpp
curso_c++/templates/: 1_template.cpp  example_1  example_1.cpp
curso_c++/time_function/: chrono_duration  chrono_duration.cpp  convert_between_times_format  convert_between_times_format.cpp  time  time.cpp  time_high_resolution  time_point  time_point.cpp  time_point_stop  time_point_stop.cpp
curso_c++/uuid/: README.md  simple_uuid  simple_uuid.cpp
nodos_concept/: CMakeLists.txt  package.xml
nodos_concept/src/: nodo_subscriber.cpp
roboskills/c_avanzado/: test  test.cpp
roboskills/c_avanzado/memoria/: ejemplo_1  ejemplo_1.cpp  fuga_memoria  fuga_memoria.cpp
roboskills/c_avanzado/namespace/: ejemplo_2.cpp
roboskills/c_avanzado/plantillas/: plantilla_1  plantilla_2  plantilla_3  plantillas_1.cpp  plantillas_2.cpp  plantillas_3.cpp
roboskills/c_avanzado/punteros_referencias/: a.out  ejemplo_1.cpp  ejemplo_2.cpp  ejemplo_3.cpp  ejemplo_4.cpp  out  parametros_referencias  parametros_referencias.cpp  punteros.cpp  referencias  referencias.cpp  test  test.cpp
roboskills/c_avanzado/ros1/: main  main.cpp  message.h  node.cpp  node.h
roboskills/cmake/ejemplo_1/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
roboskills/codigo_sin_libreria/: main.cpp
roboskills/compilacion/con_libreria/: main.cpp  my_math.cpp  my_math.h
ros_concept/: frames_2024-11-06_00.19.33.gv  frames_2024-11-06_00.20.15.gv
ros_concept/log/: latest_list
ros_concept/src/b_tf/: CMakeLists.txt  package.xml
ros_concept/src/b_tf/src/: broadcaster.cpp  listener.cpp  static_broadcaster.cpp
ros_concept/src/c_clock/: CMakeLists.txt  package.xml
ros_concept/src/c_clock/src/: test_clock.cpp
ros_concept/src/g_generate_parameter_file/: CMakeLists.txt  package.xml
ros_concept/src/g_generate_parameter_file/include/g_generate_parameter_file/: turtlesim_parameters.hpp
ros_concept/src/g_generate_parameter_file/src/: turtlesim.cpp  turtlesim_parameters.yaml
tutoriales/lib_dynamic/: dinamyc_load.cpp  main  main.cpp  mylib.cpp  mylib.h
(+26 files in other folders)
